fixed text align

--- a/CSS_advanced/styles/10-style.css
+++ b/CSS_advanced/styles/10-style.css
@@ -50,7 +50,7 @@ a {
 }
 
 .section-header {
-  horizontal-align: var(--section-header-align);
+  text-align: var(--section-header-align);
 }
 
 .section-tagline, .card-category {
